...
        // Present dialog
        self.present(popover, animated: true, completion: nil)
    }
    
    private func throwError(errorType: String) {
        let alert = UIAlertController(title: NSLocalizedString("newEntry.mistrial", comment: ""), message: errorType, preferredStyle: UIAlertController.Style.alert)
        alert.addAction(UIAlertAction(title: "OK", style: UIAlertAction.Style.cancel , handler: nil))
        self.present(alert, animated: true, completion: nil)
    }
    
    internal func checkAmount() -> Bool {
        if amountTextField.text != nil && amountTextField.text != "" && amountTextField.textColor != .lightGray {
            return true
...
